--- a/example.env
+++ b/example.env
@@ -7,4 +7,4 @@ EMAIL_CC=cpb@ufl.edu lawjames1@ufl.edu
 EMAIL_FROM=please-do-not-reply@ufl.edu
 EMAIL_TO=kshanson@ufl.edu
 EMAIL_SUBJECT=Report
-API_TOKEN=your_api_token
+TOKEN=your_api_token
