update env variables

--- a/example.env
+++ b/example.env
@@ -1,11 +1,11 @@
 INSTANCE=Development
-PROJECT_TITLE='First Responder COVID-19 Testing - Development'
+PROJECT=First Responder COVID-19 Testing - Development
 PID=8218
-SMTP_SERVER=smtp.ufl.edu
-TIME_ZONE='America/New_York'
-EMAIL_CC=cpb@ufl.edu lawjames1@ufl.edu 
-EMAIL_FROM=please-do-not-reply@ufl.edu
-EMAIL_TO=kshanson@ufl.edu
-EMAIL_SUBJECT=Report
 TOKEN=your_api_token
-URI=your_redcap_uri
+EMAIL_TO=name@example.org
+SET_SEND_SURVEY_EMAIL_TO=name@example.org
+EMAIL_FROM=please-do-not-reply@ufl.edu
+EMAIL_SUBJECT=First Responder Covid19 Report
+SMTP_SERVER=smtp.ufl.edu
+TIME_ZONE=America/New_York
+URI=https://redcap.ctsi.ufl.edu/redcap/api/
