add SET_SEND_SURVEY_EMAIL_TO param

--- a/example.env
+++ b/example.env
@@ -1,11 +1,10 @@
-INSTANCE=Development
-PROJECT=First Responder COVID-19 Testing - Development
-PID=8218
-TOKEN=your_api_token
-EMAIL_TO=name@example.org
-SET_SEND_SURVEY_EMAIL_TO=name@example.org
+INSTANCE=Production
+PROJECT=First Responder COVID-19 Testing - Production
+EMAIL_TO=you@example.org
+SET_SEND_SURVEY_EMAIL_TO=you@example.org
 EMAIL_FROM=please-do-not-reply@ufl.edu
 EMAIL_SUBJECT=First Responder Covid19 Report
 SMTP_SERVER=smtp.ufl.edu
 TIME_ZONE=America/New_York
 URI=https://redcap.ctsi.ufl.edu/redcap/api/
+TOKEN=
